--- a/archives-manage-controller/src/main/resources/application-dev.yml
+++ b/archives-manage-controller/src/main/resources/application-dev.yml
@@ -13,7 +13,7 @@ spring:
   datasource:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://192.168.68.131/db_dev_ruixing?serverTimezone=Asia/Shanghai
+      url: jdbc:mysql://192.168.68.131/db_dev_rixing?serverTimezone=Asia/Shanghai
       username: root
       password: 199726Ma.
       initial-size: 5  #默认值0。初始化时建立物理连接的个数，初始化发生在显示调用init方法，或者第一次getConnection时。
@@ -45,5 +45,7 @@ spring:
     time-zone: GMT+8
     default-property-inclusion: non_null
 mybatis-plus:
-  config-location: classpath:mybatis-config.xml
+#  config-location: classpath:mybatis-config.xml
   type-aliases-package: com.yintu.rixing
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
