--- a/archives-manage-controller/src/main/resources/application-test.yml
+++ b/archives-manage-controller/src/main/resources/application-test.yml
@@ -13,7 +13,7 @@ spring:
   datasource:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://192.168.68.131/db_dev_ruixing?serverTimezone=Asia/Shanghai
+      url: jdbc:mysql://192.168.68.131/db_dev_rixing?serverTimezone=Asia/Shanghai
       username: root
       password: 199726Ma.
       initial-size: 5  #默认值0。初始化时建立物理连接的个数，初始化发生在显示调用init方法，或者第一次getConnection时。
