--- a/archives-manage-service/pom.xml
+++ b/archives-manage-service/pom.xml
@@ -16,5 +16,9 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>archives-manage-dao</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 </project>
