--- a/archives-manage-controller/src/main/resources/application-dev.yml
+++ b/archives-manage-controller/src/main/resources/application-dev.yml
@@ -45,7 +45,31 @@ spring:
     time-zone: GMT+8
     default-property-inclusion: non_null
 mybatis-plus:
-#  config-location: classpath:mybatis-config.xml
+  #  config-location: classpath:mybatis-config.xml
   type-aliases-package: com.yintu.rixing
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+swagger:
+  title: Spring Boot Swagger2 构建RESTful API
+  description: API 描述
+  version: 1.0
+  license: Apache License, Version 2.0
+  license-url: https://www.apache.org/licenses/LICENSE-2.0.html
+  terms-of-service-url: https://github.com/dyc87112/spring-boot-starter-swagger
+  base-path: /**
+  base-package: com.yintu.rixing
+#  swagger.title=spring-boot-starter-swagger
+#  swagger.description=Starter for swagger 2.x
+#  swagger.version=1.4.0.RELEASE
+#  swagger.license=Apache License, Version 2.0
+#  swagger.licenseUrl=https://www.apache.org/licenses/LICENSE-2.0.html
+#  swagger.termsOfServiceUrl=https://github.com/dyc87112/spring-boot-starter-swagger
+#  swagger.contact.name=didi
+#  swagger.contact.url=http://blog.didispace.com
+#  swagger.contact.email=dyc87112@qq.com
+#  swagger.base-package=com.didispace
+#  swagger.base-path=/**
+#  swagger.exclude-path=/error, /ops/**
+
+
+
