edit application-dev.yml      application-prod.yml      application-test.yml      ArchivesManageApplication.java      SysTest.java      SysTestController.java files

--- a/archives-manage-controller/src/main/resources/application-dev.yml
+++ b/archives-manage-controller/src/main/resources/application-dev.yml
@@ -49,27 +49,36 @@ mybatis-plus:
   type-aliases-package: com.yintu.rixing
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#api接口配置
 swagger:
-  title: Spring Boot Swagger2 构建RESTful API
-  description: API 描述
   version: 1.0
   license: Apache License, Version 2.0
   license-url: https://www.apache.org/licenses/LICENSE-2.0.html
   terms-of-service-url: https://github.com/dyc87112/spring-boot-starter-swagger
-  base-path: /**
-  base-package: com.yintu.rixing
-#  swagger.title=spring-boot-starter-swagger
-#  swagger.description=Starter for swagger 2.x
-#  swagger.version=1.4.0.RELEASE
-#  swagger.license=Apache License, Version 2.0
-#  swagger.licenseUrl=https://www.apache.org/licenses/LICENSE-2.0.html
-#  swagger.termsOfServiceUrl=https://github.com/dyc87112/spring-boot-starter-swagger
-#  swagger.contact.name=didi
-#  swagger.contact.url=http://blog.didispace.com
-#  swagger.contact.email=dyc87112@qq.com
-#  swagger.base-package=com.didispace
-#  swagger.base-path=/**
-#  swagger.exclude-path=/error, /ops/**
+  contact:
+    name: 马龙飞
+    url: https://www.baidu.com
+    email: 1107201045@qq.com
+  docket:
+    login:
+      title: 登录模块
+      description: 登录有关的接口
+      base-package: com.yintu.rixing
+      base-path:
+        - /login
+        - /login/**
+      exclude-path: [ /error ]
+    system:
+      title: 系统管理模块
+      description: 系统管理模块有关的接口
+      version: 1.0
+      license: Apache License, Version 2.0
+      license-url: https://www.apache.org/licenses/LICENSE-2.0.html
+      terms-of-service-url: https://github.com/dyc87112/spring-boot-starter-swagger
+      base-package: com.yintu.rixing
+      base-path:
+        - /system/**
+      exclude-path: [ /error ]
 
 
 
