edit application-dev.yml      application-prod.yml      application-test.yml      CaptchaController.java      CustomSwaggerApiDescription.java files

--- a/archives-manage-controller/src/main/resources/application-dev.yml
+++ b/archives-manage-controller/src/main/resources/application-dev.yml
@@ -72,7 +72,9 @@ swagger:
       description: 登录有关的接口
       base-package: com.yintu.rixing.config.controller
       base-path:
-        - /login/**
+        - /login
+        - /logout
+        - /captcha
       exclude-path: [ /error ]
     system:
       title: 系统管理模块
