--- a/archives-manage-controller/src/main/resources/application-dev.yml
+++ b/archives-manage-controller/src/main/resources/application-dev.yml
@@ -35,6 +35,8 @@ spring:
           enabled: true # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙属性类型是字符串，通过别名的方式配置扩展插件，常用的插件有：监控统计用的filter:stat、日志用的filter:log4j、防御sql注入的filter:wall。
           log-slow-sql: true
           slow-sql-millis: 2000
+        slf4j:
+          enabled: true
   servlet:
     multipart:
       enabled: true   #开启文件上传
