--- a/archives-manage-controller/src/main/resources/application-prod.yml
+++ b/archives-manage-controller/src/main/resources/application-prod.yml
@@ -13,8 +13,8 @@ spring:
   datasource:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://192.168.68.131/db_dev_rixing?serverTimezone=Asia/Shanghai
-      username: root
+      url: jdbc:mysql://121.89.223.9/rixing?serverTimezone=Asia/Shanghai
+      username: rixing
       password: J2m6hNsY2rDnhkc5
       initial-size: 5  #默认值0。初始化时建立物理连接的个数，初始化发生在显示调用init方法，或者第一次getConnection时。
       max-active: 20 #默认值8。最大连接池数量。
@@ -83,4 +83,5 @@ swagger:
       base-path:
         - /system/**
       exclude-path: [ /error ]
+
 
