--- a/archives-manage-controller/src/main/resources/application-test.yml
+++ b/archives-manage-controller/src/main/resources/application-test.yml
@@ -14,7 +14,7 @@ spring:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
       url: jdbc:mysql://121.89.223.9/rixing?serverTimezone=Asia/Shanghai
-      username: root
+      username: rixing
       password: J2m6hNsY2rDnhkc5
       initial-size: 5  #默认值0。初始化时建立物理连接的个数，初始化发生在显示调用init方法，或者第一次getConnection时。
       max-active: 20 #默认值8。最大连接池数量。
