--- a/archives-manage-controller/src/main/resources/application-prod.yml
+++ b/archives-manage-controller/src/main/resources/application-prod.yml
@@ -1,6 +1,8 @@
 server:
   port: 8080
   tomcat:
+    protocol-header: X-Forwarded-Proto
+    remote-ip-header: X-Forwarded-For
     accept-count: 1000
     max-threads: 400
     min-spare-threads: 1000
