edit application-dev.yml      application-prod.yml      application-test.yml      CustomWebSecurityConfigurerAdapter.java      ISysTemplateLibraryFieldService.java      logback-spring.xml      MyBatisPlusConfiguration.java      SysTemplateLibraryField.java      SysTemplateLibraryFieldController.java      SysTemplateLibraryFieldServiceImpl.java files

--- a/archives-manage-controller/src/main/resources/application-test.yml
+++ b/archives-manage-controller/src/main/resources/application-test.yml
@@ -49,8 +49,10 @@ spring:
     time-zone: GMT+8
     default-property-inclusion: non_null
 mybatis-plus:
-  config-location: classpath:mybatis-config.xml
+  #config-location: classpath:mybatis-config.xml
   type-aliases-package: com.yintu.rixing
+ #configuration:
+   #log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 #api接口配置
 swagger:
   version: 1.0
