--- a/archives-manage-controller/pom.xml
+++ b/archives-manage-controller/pom.xml
@@ -35,6 +35,10 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
