--- a/archives-manage-controller/src/main/resources/application-dev.yml
+++ b/archives-manage-controller/src/main/resources/application-dev.yml
@@ -60,7 +60,7 @@ swagger:
   license-url: https://www.apache.org/licenses/LICENSE-2.0.html
   terms-of-service-url: https://github.com/dyc87112/spring-boot-starter-swagger
   contact:
-    name: 马龙飞
+    name: Spring
     url: https://www.baidu.com
     email: 1107201045@qq.com
   docket:
@@ -87,12 +87,26 @@ swagger:
       base-path:
         - /common/**
       exclude-path: [ /error ]
+    make:
+      title: 利用中心模块
+      description: 利用中心有关的接口
+      base-package: com.yintu.rixing.make
+      base-path:
+        - /make/**
+      exclude-path: [ /error ]
     security:
       title: 安全中心模块
       description: 安全中心模块有关的接口
       base-package: com.yintu.rixing.security
       base-path:
         - /security/**
+      exclude-path: [ /error ]
+    notification:
+      title: 通知公告模块
+      description: 通知公告有关的接口
+      base-package: com.yintu.rixing.notification
+      base-path:
+        - /notification/**
       exclude-path: [ /error ]
     system:
       title: 系统设置模块
