--- a/archives-manage-service/pom.xml
+++ b/archives-manage-service/pom.xml
@@ -25,5 +25,9 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+        </dependency>
     </dependencies>
 </project>
