edit too much files

--- a/archives-manage-common/pom.xml
+++ b/archives-manage-common/pom.xml
@@ -64,5 +64,9 @@
             <artifactId>spring-boot-starter-logging</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+        </dependency>
     </dependencies>
 </project>
