--- a/archives-manage-controller/src/main/resources/application-test.yml
+++ b/archives-manage-controller/src/main/resources/application-test.yml
@@ -127,3 +127,10 @@ swagger:
       base-path:
         - /system/**
       exclude-path: [ /error ]
+    remote:
+      title: 远程借阅模块
+      description: 远程借阅模块有关的接口
+      base-package: com.yintu.rixing.remote
+      base-path:
+        - /remote/**
+      exclude-path: [ /error ]
