edit application-dev.yml files

--- a/archives-manage-controller/src/main/resources/application-dev.yml
+++ b/archives-manage-controller/src/main/resources/application-dev.yml
@@ -58,98 +58,7 @@ mybatis-plus:
   type-aliases-package: com.yintu.rixing
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-#api接口配置
-swagger:
-  version: 1.0
-  license: Apache License, Version 2.0
-  license-url: https://www.apache.org/licenses/LICENSE-2.0.html
-  terms-of-service-url: https://github.com/dyc87112/spring-boot-starter-swagger
-  contact:
-    name: Mr.刘
-    url: https://www.baidu.com
-    email: 852933072@qq.com
-  docket:
-    demo:
-      title: demo模块
-      description: demo有关接口
-      base-package: com.yintu.rixing.demo
-      base-path:
-        - /demo/**
-      exclude-path: [ /error ]
-    login:
-      title: 登录模块
-      description: 登录有关的接口
-      base-package: com.yintu.rixing.config.controller
-      base-path:
-        - /login
-        - /logout
-        - /captcha
-      exclude-path: [ /error ]
-    common:
-      title: 公共模块
-      description: 无需授权有关的接口
-      base-package: com.yintu.rixing.common
-      base-path:
-        - /common/**
-      exclude-path: [ /error ]
-    make:
-      title: 利用中心模块
-      description: 利用中心有关的接口
-      base-package: com.yintu.rixing.make
-      base-path:
-        - /make/**
-      exclude-path: [ /error ]
-    data:
-      title: 数据中心模块
-      description: 数据中心有关的接口
-      base-package: com.yintu.rixing.data
-      base-path:
-        - /data/**
-      exclude-path: [ /error ]
-    security:
-      title: 安全中心模块
-      description: 安全中心模块有关的接口
-      base-package: com.yintu.rixing.security
-      base-path:
-        - /security/**
-      exclude-path: [ /error ]
-    notification:
-      title: 通知公告模块
-      description: 通知公告有关的接口
-      base-package: com.yintu.rixing.notification
-      base-path:
-        - /notification/**
-      exclude-path: [ /error ]
-    system:
-      title: 系统设置模块
-      description: 系统管理模块有关的接口
-      base-package: com.yintu.rixing.system
-      base-path:
-        - /system/**
-      exclude-path: [ /error ]
-    Noticemessage:
-      title: 通知公告模块
-      description: 通知公告模块有关的接口
-      base-package: com.yintu.rixing.notification
-      base-path:
-        - /notification/**
-      exclude-path: [ /error ]
-
-    MakeBorrow:
-      title: 利用中心
-      description: 借阅申请有关的接口
-      base-package: com.yintu.rixing.make
-      base-path:
-        - /make/**
-      exclude-path: [ /error ]
-    Warehouse:
-      title: 库房管理
-      description: 库房管理有关的接口
-      base-package: com.yintu.rixing.warehouse
-      base-path:
-        - /warehouse/**
-      exclude-path: [ /error ]
-
-
+knife4j:
+  enable: true
 
 
