--- a/archives-manage-common/pom.xml
+++ b/archives-manage-common/pom.xml
@@ -67,5 +67,13 @@
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.zhuozhengsoft</groupId>
+            <artifactId>pageofface</artifactId>
+        </dependency>
     </dependencies>
 </project>
