--- a/archives-manage-controller/src/main/resources/application-prod.yml
+++ b/archives-manage-controller/src/main/resources/application-prod.yml
@@ -13,7 +13,7 @@ spring:
   datasource:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://121.89.223.9/rixing?serverTimezone=Asia/Shanghai
+      url: jdbc:mysql://121.89.223.9/rixing?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8
       username: rixing
       password: J2m6hNsY2rDnhkc5
       initial-size: 5  #默认值0。初始化时建立物理连接的个数，初始化发生在显示调用init方法，或者第一次getConnection时。
