--- a/archives-manage-controller/pom.xml
+++ b/archives-manage-controller/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>archives-manage-parent</artifactId>
-        <groupId>com.lingyi.rixing</groupId>
+        <groupId>com.yintu.rixing</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
