--- a/archives-manage-controller/src/main/resources/application-dev.yml
+++ b/archives-manage-controller/src/main/resources/application-dev.yml
@@ -6,7 +6,7 @@ server:
     accept-count: 1000
     max-threads: 400
     min-spare-threads: 1000
-    max-swallow-size: 100MB #文件上传总大小
+    max-swallow-size: -1 #文件上传总大小
   servlet:
     context-path: /archivesManage
     session:
@@ -16,13 +16,13 @@ spring:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
       #本地
-      #url: jdbc:mysql://127.0.0.1/rixing?serverTimezone=Asia/Shanghai
-      #username: root
-      #password: root
+      url: jdbc:mysql://127.0.0.1/db_dev_rixing?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8
+      username: root
+      password: 199726Ma.
       #线上
-      url: jdbc:mysql://121.89.223.9/rixing?serverTimezone=Asia/Shanghai
-      username: rixing
-      password: J2m6hNsY2rDnhkc5
+      #url: jdbc:mysql://121.89.223.9/rixing?serverTimezone=Asia/Shanghai
+      #username: rixing
+      #password: J2m6hNsY2rDnhkc5
       initial-size: 5  #默认值0。初始化时建立物理连接的个数，初始化发生在显示调用init方法，或者第一次getConnection时。
       max-active: 20 #默认值8。最大连接池数量。
       min-idle: 5 #最小连接池数量。 #spring.datasource.druid.maxIdle: 已经不再使用，配置了也没效果，可忽略。说明：maxIdle是Druid为了方便DBCP用户迁移而增加的，maxIdle是一个混乱的概念。连接池只应该有maxPoolSize和minPoolSize，druid只保留了maxActive和minIdle，分别相当于maxPoolSize和minPoolSize。
@@ -47,8 +47,8 @@ spring:
   servlet:
     multipart:
       enabled: true   #开启文件上传
-      max-file-size: 10MB #单个文件的最大上限
-      max-request-size: 1000MB  #单个请求的文件总大小上限
+      max-file-size: 100MB #单个文件的最大上限
+      max-request-size: 1024MB  #单个请求的文件总大小上限
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
@@ -60,5 +60,3 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 knife4j:
   enable: true
-
-
